# RTL_Benchmark

./: .directory  README.md  control.v  gen_filelist.py  long_run.json  macro_benchmarks.json  meso_benchmarks.json  micro-benchmarks.json  path_list.txt  plain_luts.json  replace.py  scalable.json  unsynthesizable_yosys.json
.github/: gen_filelist.py
gemini_bcpu/design/acpu_ss/acpu_ss/A45/andes_vip/patterns/riscv-tests/: Make.rules  Make.vars  Makefile  Makefile.in  configure  configure.ac  setup.sh
gemini_bcpu/design/acpu_ss/acpu_ss/A45/andes_vip/patterns/riscv-tests/env/: encoding.h
gemini_bcpu/design/acpu_ss/acpu_ss/A45/andes_vip/patterns/riscv-tests/env/p/: link.ld  riscv_test.h
gemini_bcpu/design/acpu_ss/acpu_ss/A45/andes_vip/patterns/riscv-tests/isa/rv64mi/: access.S  breakpoint.S
gemini_bcpu/design/acpu_ss/acpu_ss/A45/andes_vip/patterns/riscv-tests/isa_patch/: access.S.patch  breakpoint.S.patch  patch.sh
gemini_bcpu/design/acpu_ss/acpu_ss/A45/andes_vip/patterns/riscv-tests/rundir/test_rv32mi_breakpoint/: NDSROM.list
gemini_bcpu/design/acpu_ss/acpu_ss/A45/andes_vip/patterns/riscv-tests/rundir/test_rv32mi_csr/: NDSROM.list
gemini_bcpu/design/acpu_ss/acpu_ss/A45/andes_vip/patterns/riscv-tests/rundir/test_rv32mi_illegal/: NDSROM.list
gemini_bcpu/design/acpu_ss/acpu_ss/A45/andes_vip/patterns/riscv-tests/rundir/test_rv32mi_ma_addr/: NDSROM.list
gemini_bcpu/design/acpu_ss/acpu_ss/A45/andes_vip/patterns/riscv-tests/rundir/test_rv32mi_ma_fetch/: NDSROM.list
gemini_bcpu/design/acpu_ss/acpu_ss/A45/andes_vip/patterns/riscv-tests/rundir/test_rv32mi_mcsr/: NDSROM.list
gemini_bcpu/design/acpu_ss/acpu_ss/A45/andes_vip/patterns/riscv-tests/rundir/test_rv32mi_sbreak/: NDSROM.list
gemini_bcpu/design/acpu_ss/acpu_ss/A45/andes_vip/patterns/riscv-tests/rundir/test_rv32mi_scall/: NDSROM.list
(+13743 files in other folders)
